@@ -10,6 +10,7 @@ aTunes 3.0.1
 - FIX: Updated JNA library to avoid initialization errors
 - FIX: Initial heap size changed to 128MB
 - FIX: Check if icon cache fails reading icon files
+- FIX: Problem with play lists active and visible after upgrading version
 
 aTunes 3.0.0
 ------------
